GH-39001: [Java] Modularize remaining modules (#39221)
### Rationale for this change
Modularize remaining modules outside of memory modules, vector, and format.

### What changes are included in this PR?

### Are these changes tested?
Yes, existing unit tests now run with modules when using JDK9+.

### Are there any user-facing changes?
Yes. There are new command-line options that may be necessary. The way of specifying the output directory for
JNI native library builds differs. The flight-grpc module has been eliminated since it is now built into flight-core.
Documentation has been updated for these changes.

**This PR includes breaking changes to public APIs.**
There are a number of package structure changes and some modules now need additional command-line arguments.

* Closes: #39001

Authored-by: James Duong <james.duong@improving.com>
Signed-off-by: David Li <li.davidm96@gmail.com>